<resources>
    <string name="app_name">FitMate</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="fitmate">fitmate</string>
    <string name="fitmate_colorful">fit<font color="#EEB07C">mate</font></string>
    <string name="surround_yourself_with_determined_people_who_want_to_be_fit_like_you">Surround yourself with determined people who want to be fit like you</string>
    <string name="find_your_fit">Find your Fit</string>
    <string name="sign_in">Sign in</string>
    <string name="sign_up">Sign up</string>
    <string name="resend_verification_mail">Resend Verification mail</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="new_user_sign_up">New user ? Sign up</string>
    <string name="already_have_an_account_sign_in">Already have an account ? Sign in</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="enter_your_email_id">Enter your Email Id</string>
    <string name="enter_a_password">Enter a password</string>
    <string name="confirm_your_password">Confirm your password</string>
    <string name="countdown">Resend Verification Mail in %ds</string>
    <string name="upload_profile">Upload profile</string>
    <string name="accepttnc">I accept Terms and Conditions</string>
    <string name="name">Name</string>
    <string name="gender">Gender</string>
    <string name="d_o_b">D.O.B</string>
    <string name="state">State</string>
    <string name="join_your_favourite_communities">Join your favourite communities</string>
    <string name="join">Join</string>
    <string name="skip">Skip</string>
    <string name="workout">Workout</string>
    <string name="home">Home</string>
    <string name="insights">Insights</string>
    <string name="my_partners">My Partners</string>
    <string name="find_partners">Find Partners</string>
    <string name="communities">Communities</string>
    <string name="sign_out">Sign Out</string>
    <string name="take_a_challenge">Take a challenge</string>
    <string name="time_remaining">Time Remaining %s</string>
    <string name="complete_your_challenge">Complete your challenge</string>
    <string name="tasks">Tasks</string>
    <string name="finish">Finish</string>
    <string name="badges_earned">Badges <font color="#EEB07C">earned</font></string>
    <string name="challenges_completed">Challenges <font color="#EEB07C">completed</font></string>
    <string name="take_challenge">Take Challenge</string>
    <string name="your_posts">Your Posts</string>
    <string name="find_new_partners">Find New Partners</string>
    <string name="fill_the_form_correctly_to_find_a_suitable_fitness_partner">Fill the form correctly to find a suitable fitness partner</string>
    <string name="category">Category</string>
    <string name="motive">Motive</string>
    <string name="your_preferences">Your Preferences</string>
    <string name="gender_independent">Gender Independent</string>
    <string name="same_gender">Same Gender</string>
    <string name="read_terms_and_conditions">Read Terms and Conditions</string>
    <string name="send_request">Send Request</string>
    <string name="search">Search</string>
    <string name="possible_matches">Possible Matches</string>
    <string name="no_posts_found_click_on_button_to_create_posts_and_find_new_partners">No Posts Found ! Click on button to create posts and find new partners</string>
    <string name="delete_post">Delete Post</string>
    <string name="category_colorful">Category : <font color="#EEB07C">%s</font></string>
    <string name="motive_colorful">Motive : <font color="#EEB07C">%s</font></string>
    <string name="preference_colorful">Preference : <font color="#EEB07C">%s</font></string>
    <string name="create_post">Create Post</string>
    <string name="today">Today</string>
    <string name="yesterday">Yesterday</string>
    <string name="monday">Monday</string>
    <string name="tuesday">Tuesday</string>
    <string name="wednesday">Wednesday</string>
    <string name="thursday">Thursday</string>
    <string name="friday">Friday</string>
    <string name="saturday">Saturday</string>
    <string name="sunday">Sunday</string>
    <string name="type_your_message">Type your message</string>
    <string name="accept">Accept</string>
    <string name="reject">Reject</string>
</resources>