<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/transparent"
    tools:context=".fragments.IntroFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tvTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:fontFamily="@font/source_sans_pro_bold"
            android:gravity="center"
            android:text="@string/fitmate"
            android:textColor="@color/white"
            android:textSize="64sp" />

        <TextView
            android:id="@+id/tvTagline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            android:fontFamily="@font/source_sans_pro_bold"
            android:gravity="center"
            android:text="@string/surround_yourself_with_determined_people_who_want_to_be_fit_like_you"
            android:textColor="@color/white"
            android:textSize="15sp" />

    </LinearLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/proceedBtn"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="42dp"
        android:layout_marginEnd="42dp"
        android:layout_marginBottom="53dp"
        android:backgroundTint="@color/white"
        android:fontFamily="@font/source_sans_pro_semi_bold"
        android:text="@string/find_your_fit"
        android:textColor="@color/black"
        android:textSize="18sp"
        app:cornerRadius="10dp" />
</RelativeLayout>