<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_marginTop="25dp"
    tools:context=".fragments.CommunitiesFragment">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:gravity="center"
        android:text="@string/join_your_favourite_communities"
        android:layout_gravity="center_horizontal"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvCommunities"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="6dp"
        android:orientation="vertical"
        android:overScrollMode="never"
        android:layout_gravity="center"
        app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
        app:spanCount="3"
        tools:listitem="@layout/list_item_community"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:layout_marginStart="28dp"
        android:layout_marginTop="25dp"
        android:layout_marginEnd="28dp"
        android:layout_marginBottom="20dp">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/joinBtn"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:backgroundTint="@color/mustard"
            android:textSize="18sp"
            android:textColor="@color/white"
            app:cornerRadius="10dp"
            android:text="@string/join"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/skipBtn"
            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
            app:strokeWidth="2dp"
            app:strokeColor="@color/mustard"
            android:layout_width="0dp"
            android:layout_marginStart="10dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:backgroundTint="@color/black"
            android:textSize="18sp"
            android:textColor="@color/white"
            app:cornerRadius="10dp"
            android:text="@string/skip"/>

    </LinearLayout>
</LinearLayout>